--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -9,21 +9,20 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <!-- RabbitMQ AMQP Client dependency -->
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
-            <version>5.17.0</version> <!-- Check for latest version -->
+            <version>5.17.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.9</version> <!-- Make sure to use the latest version -->
+            <version>2.0.9</version>
         </dependency>
                 <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>2.0.9</version> <!-- Make sure to use the latest version -->
+            <version>2.0.9</version>
         </dependency>
     </dependencies>
 
